--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Bunny Dress Up</title>
+<title>Study Bot Maker</title>
 <style>
 
 body{
@@ -127,7 +127,7 @@ p a{
 <body>
 
 <h1>First Select your Bot Shape. Then Click the bot shape you like to edit it.</h1>
-<p>Click the > to see other bot shapes.</p>
+<p>Click the > to see other bot shapes, think about what your bot will do while you design it!</p>
 
 
 <ul>
@@ -141,7 +141,7 @@ p a{
 </ul>
 
 
-
+<a type="button" href="form.html" target="_blank"><button  class="btn-default"> Submit My Study Bot!</button></a>
 
 
 <!-- simple bot-->
