--- a/index.html
+++ b/index.html
@@ -112,6 +112,26 @@ p a{
   padding: 5px;
 }
 </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+
+<!--     Fonts and icons     -->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<!-- Nucleo Icons -->
+<link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
+<link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+<!-- Font Awesome Icons -->
+<link href="./assets/css/font-awesome.css" rel="stylesheet" />
+<link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+<link href="scroll.css" rel="stylesheet" />
+<!-- CSS Files -->
+<link href="./assets/css/argon-design-system.css?v=1.2.0" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="assets\css\background.css">
+<link rel="stylesheet" href="assets\css\draggable.css">
+
 
 <link rel= "stylesheet" type="text/css" href="dressup.css">
 
@@ -119,6 +139,7 @@ p a{
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <script src="dressup.js"></script>
 <script type="text/javascript">
+
 
 </script>
 
@@ -141,7 +162,7 @@ p a{
 </ul>
 
 
-<a type="button" href="form.html" target="_blank"><button  class="btn-default"> Submit My Study Bot!</button></a>
+<a type="button" href="form.html" target="_blank"><button  class="btn-default">Submit My Study Bot!</button></a>
 
 
 <!-- simple bot-->
