--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ p a{
 <a type="button" href="form.html" target="_blank"><button  class="btn-default">Submit My Study Bot!</button></a>
 
 
-<!-- simple bot-->
-<a href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/edit?usp=sharing" target="_blank">
+<!-- Chat bot-->
+<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/edit?usp=sharing" target="_blank">
 <img id="bottom1" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
 </a>
 
@@ -175,7 +175,7 @@ p a{
   <img id="bottom2"  class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vTdk7i07owtCeUOSUaI3eoReqgu0Nz0CXdstR7yLWGwNw4s0aMdB-JIGyTWYiiud7Kt5Eml8Tz-69gM/pub?w=960&h=720" />
 </a>
 
-<!--star bot-->
+<!--rectangle bot-->
 <a href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/edit?usp=sharing" target="_blank">
   <img id="bottom3" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vQtJuATm0-AUAfO9nCbEDNHi_OwRKo7rHYO90g7AanV9Y9cYhohUfGtSawojHXlAGcpAFLmxM7jKnJi/pub?w=960&h=720" />
 </a>
@@ -186,10 +186,10 @@ p a{
 </a>
 
 
-<!-- rectangle bot -->  
+<!-- circle bot -->  
 
 <a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/edit?usp=sharing" target="_blank">
-  <img id="bottom5" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vTMR2nexyWbtCTNxxxIZkCXRklW6QEQHDKQtzbGLpPUi6SPDFz_sqsy0MHyj9-T4T9u3xeUkp6WWga6/pub?w=960&h=720" />
+  <img id="bottom5" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
 </a>
 
 <!-- Triangle Bot -->  
