--- a/index.html
+++ b/index.html
@@ -147,60 +147,62 @@ p a{
 
 <body>
 
-<h1>First Select your Bot Shape. Then Click the bot shape you like to edit it.</h1>
-<p>Click the > to see other bot shapes, think about what your bot will do while you design it!</p>
-
+<h1><b>1. First Select your Bot Template by clicking:</b>
 
 <ul>
-<li><button style="display:none" class="btn btn-default" id="shirt_button" type="button" >Face</button></li>
-  
+    <li><button class="btn btn-default" id="pant_button" type="button" style="background-color: orange;">See Next Bot Template</button></li>
 
+<li><button style="display:none" class="btn btn-default" id="shirt_button" type="button">Face</button></li>
   
-  <li><button class="btn btn-default" id="pant_button" type="button">></button></li>
 
 </li>
-</ul>
+</ul><h3>Keep clicking the button until you find a template you like!</h3>
+
+<h1><b>2. Then Click the bot shape you like to edit it.</b></h1>
 
 
-<a type="button" href="form.html" target="_blank"><button  class="btn-default">Submit My Study Bot!</button></a>
+
+
+
+
 
 
 <!-- Chat bot-->
-<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/copy?usp=sharing" target="_blank">
 <img id="bottom1" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
 </a>
 
 <!--heart bot -->
-<a href="https://docs.google.com/drawings/d/1yKb0APConqdN3aYrhTe3sAICIGSKl1VeqxZTUNswUXI/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1yKb0APConqdN3aYrhTe3sAICIGSKl1VeqxZTUNswUXI/copy?usp=sharing" target="_blank">
   <img id="bottom2"  class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vTdk7i07owtCeUOSUaI3eoReqgu0Nz0CXdstR7yLWGwNw4s0aMdB-JIGyTWYiiud7Kt5Eml8Tz-69gM/pub?w=960&h=720" />
 </a>
 
 <!--rectangle bot-->
-<a href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/copy?usp=sharing" target="_blank">
   <img id="bottom3" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vQtJuATm0-AUAfO9nCbEDNHi_OwRKo7rHYO90g7AanV9Y9cYhohUfGtSawojHXlAGcpAFLmxM7jKnJi/pub?w=960&h=720" />
 </a>
 
 <!--Triangle Bot -->  
-<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/copy?usp=sharing" target="_blank">
   <img id="bottom4" style="z-index: 3" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vRFZ0fsK-GNZYGK8fi5o3JHinFxMX46CJgqgRC3PobvUrV8Uvk9ppxqHnlt5H8M_FnHap1rzW8zWnOb/pub?w=960&h=720" />
 </a>
 
 
 <!-- circle bot -->  
 
-<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/copy?usp=sharing" target="_blank">
   <img id="bottom5" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
 </a>
 
 <!-- Triangle Bot -->  
 
-<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/copy?usp=sharing" target="_blank">
   <img id="bottom6" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vRFZ0fsK-GNZYGK8fi5o3JHinFxMX46CJgqgRC3PobvUrV8Uvk9ppxqHnlt5H8M_FnHap1rzW8zWnOb/pub?w=960&h=720" />
 </a>
 
 <!-- Hexagon Bot -->  
 
-<a href="https://docs.google.com/drawings/d/1_xo9j0a7S6tfXYCDOo-GWDS-5eXNLUT-7UhbDhCD7MY/edit?usp=sharing" target="_blank">
+<a href="https://docs.google.com/drawings/d/1_xo9j0a7S6tfXYCDOo-GWDS-5eXNLUT-7UhbDhCD7MY/copy?usp=sharing" target="_blank">
   <img id="bottom7" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSIQ2_e5hFBIcUyexLxxhzliDnVxw_hW6yJcAH9SRLJAfByempNq8UeqhsYXNLhkl318uITjbV1RQGe/pub?w=960&h=720"/>
 </a>
 
