--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@ body{
 }
 
 
-
-img {
-  position: absolute;
-  margin-left: 15%;
-display:inline-block;
-  height:100%;
-}
-
-
 button{
   margin-top:20%;
 }
@@ -114,148 +105,86 @@ p a{
 </style>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+<link rel="apple-touch-icon" sizes="76x76" class="column" href="./assets/img/apple-icon.png">
+<link rel="stylesheet" class="column" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
 <!--     Fonts and icons     -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link class="column" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+<link class="column" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <!-- Nucleo Icons -->
-<link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
-<link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+<link class="column" href="./assets/css/nucleo-icons.css" rel="stylesheet" />
+<link class="column" href="./assets/css/nucleo-svg.css" rel="stylesheet" />
 <!-- Font Awesome Icons -->
-<link href="./assets/css/font-awesome.css" rel="stylesheet" />
-<link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
-<link href="scroll.css" rel="stylesheet" />
+<link class="column" href="./assets/css/font-awesome.css" rel="stylesheet" />
+<link class="column" href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+<link class="column" href="scroll.css" rel="stylesheet" />
 <!-- CSS Files -->
-<link href="./assets/css/argon-design-system.css?v=1.2.0" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" href="assets\css\background.css">
-<link rel="stylesheet" href="assets\css\draggable.css">
+<link class="column" href="./assets/css/argon-design-system.css?v=1.2.0" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" class="column" href="assets\css\background.css">
+<link rel="stylesheet" class="column" href="assets\css\draggable.css">
 
 
-<link rel= "stylesheet" type="text/css" href="dressup.css">
+<link rel= "stylesheet" type="text/css" class="column" href="dressup.css">
 
- <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+ <link class="column" href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
 <script src="dressup.js"></script>
-<script type="text/javascript">
-
-
-</script>
+<script type="text/javascript"></script>
 
 </head>
 
+<style>
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+img{
+  height: 300px;
+  width: 100%;
+}
+</style>
+
 <body>
 
-<h1><b>1. First Select your Bot Template by clicking:</b>
+  <center>
 
-<ul>
-    <li><button class="btn btn-default" id="pant_button" type="button" style="background-color: orange;">See Next Bot Template</button></li>
-
-<li><button style="display:none" class="btn btn-default" id="shirt_button" type="button">Face</button></li>
-  
-
-</li>
-</ul><h3>Keep clicking the button until you find a template you like!</h3>
-
-<h1><b>2. Then Click the bot shape you like to edit it.</b></h1>
-
-
-
-
+<h1><b>1. First Select your Bot Template, click it to edit it:</b></h1>
 
 
 
 
 <!-- Chat bot-->
-<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/copy?usp=sharing" target="_blank">
-<img id="bottom1" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
+<a class="column" href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/copy?usp=sharing" target="_blank">
+<img src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
 </a>
 
 <!--heart bot -->
-<a href="https://docs.google.com/drawings/d/1yKb0APConqdN3aYrhTe3sAICIGSKl1VeqxZTUNswUXI/copy?usp=sharing" target="_blank">
-  <img id="bottom2"  class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vTdk7i07owtCeUOSUaI3eoReqgu0Nz0CXdstR7yLWGwNw4s0aMdB-JIGyTWYiiud7Kt5Eml8Tz-69gM/pub?w=960&h=720" />
+<a class="column" href="https://docs.google.com/drawings/d/1yKb0APConqdN3aYrhTe3sAICIGSKl1VeqxZTUNswUXI/copy?usp=sharing" target="_blank">
+  <img src="https://docs.google.com/drawings/d/e/2PACX-1vTdk7i07owtCeUOSUaI3eoReqgu0Nz0CXdstR7yLWGwNw4s0aMdB-JIGyTWYiiud7Kt5Eml8Tz-69gM/pub?w=960&h=720" />
 </a>
 
 <!--rectangle bot-->
-<a href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/copy?usp=sharing" target="_blank">
-  <img id="bottom3" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vQtJuATm0-AUAfO9nCbEDNHi_OwRKo7rHYO90g7AanV9Y9cYhohUfGtSawojHXlAGcpAFLmxM7jKnJi/pub?w=960&h=720" />
+<a class="column" href="https://docs.google.com/drawings/d/1N594Qk0ORfjMafsUs-IsEHTk8vH46NfXZH8wQgmoVQw/copy?usp=sharing" target="_blank">
+  <img src="https://docs.google.com/drawings/d/e/2PACX-1vQtJuATm0-AUAfO9nCbEDNHi_OwRKo7rHYO90g7AanV9Y9cYhohUfGtSawojHXlAGcpAFLmxM7jKnJi/pub?w=960&h=720" />
 </a>
 
-<!--Triangle Bot -->  
-<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/copy?usp=sharing" target="_blank">
-  <img id="bottom4" style="z-index: 3" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vRFZ0fsK-GNZYGK8fi5o3JHinFxMX46CJgqgRC3PobvUrV8Uvk9ppxqHnlt5H8M_FnHap1rzW8zWnOb/pub?w=960&h=720" />
-</a>
-
-
-<!-- circle bot -->  
-
-<a href="https://docs.google.com/drawings/d/1m1p0csm1x6Ww36hNRqvsjcvL8bOttE98TVFs0ws3N8k/copy?usp=sharing" target="_blank">
-  <img id="bottom5" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSiIyDf5lxi8IgWhvfpXcLW88rTYuUFjsc2UzkV3v4CLE2qtxG7bee1OLF70W58y21HL3JzgIYX599L/pub?w=960&h=720" />
-</a>
 
 <!-- Triangle Bot -->  
 
-<a href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/copy?usp=sharing" target="_blank">
-  <img id="bottom6" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vRFZ0fsK-GNZYGK8fi5o3JHinFxMX46CJgqgRC3PobvUrV8Uvk9ppxqHnlt5H8M_FnHap1rzW8zWnOb/pub?w=960&h=720" />
+<a class="column" href="https://docs.google.com/drawings/d/1ch8lCOQYlo4gzgt0mTAF12X1r0vr61RQA0oZt_r3g1k/copy?usp=sharing" target="_blank">
+  <img src="https://docs.google.com/drawings/d/e/2PACX-1vRFZ0fsK-GNZYGK8fi5o3JHinFxMX46CJgqgRC3PobvUrV8Uvk9ppxqHnlt5H8M_FnHap1rzW8zWnOb/pub?w=960&h=720" />
 </a>
 
 <!-- Hexagon Bot -->  
 
-<a href="https://docs.google.com/drawings/d/1_xo9j0a7S6tfXYCDOo-GWDS-5eXNLUT-7UhbDhCD7MY/copy?usp=sharing" target="_blank">
-  <img id="bottom7" class="pant" src="https://docs.google.com/drawings/d/e/2PACX-1vSIQ2_e5hFBIcUyexLxxhzliDnVxw_hW6yJcAH9SRLJAfByempNq8UeqhsYXNLhkl318uITjbV1RQGe/pub?w=960&h=720"/>
+<a class="column" href="https://docs.google.com/drawings/d/1_xo9j0a7S6tfXYCDOo-GWDS-5eXNLUT-7UhbDhCD7MY/copy?usp=sharing" target="_blank">
+  <img src="https://docs.google.com/drawings/d/e/2PACX-1vSIQ2_e5hFBIcUyexLxxhzliDnVxw_hW6yJcAH9SRLJAfByempNq8UeqhsYXNLhkl318uITjbV1RQGe/pub?w=960&h=720"/>
 </a>
 
 
-
-
-<script>
-  $(document).ready(function(){
-
-function ImageSwitcher(choices, i) {
-  i = 0;
-  
-  this.Next = function() {
-    hide_current_image();
-    show_next_image();
-  }
-  
-  var hide_current_image = function() {
-    if(choices){
-      choices[i].style.visibility = "hidden";
-      i += 1;
-    }
-  }
-  var show_next_image = function() {
-    if(choices){
-      if(i == (choices.length)) {
-        i = 0;
-      }
-      choices[i].style.visibility = "visible";
-    }
-  }
-}
-  
-    var pants = $(".pant");
-  var shirts = $(".shirt");
-  var backgrounds = $(".bg");
-
-  var shirt_picker = new ImageSwitcher(shirts);
-  document.getElementById("shirt_button").onclick = function() { shirt_picker.Next(); };
-  
-  var pants_picker = new ImageSwitcher(pants);
-  document.getElementById("pant_button").onclick = function() {pants_picker.Next(); };
-  
-  var bg_picker = new ImageSwitcher(backgrounds);
-  document.getElementById("bg_button").onclick = function() {bg_picker.Next(); };
-
-});
-
-  $("#shirt_button").click(function(){
-  $("#shirt-menu").css("visibility", "visible"); });
-
-</script>
-
+</center>
 
 </body>
 </html>
